data/derived/comb/progs/unify/prog4425.ml.out
Characters 251-255:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type (int list * int list) list
       but an expression was expected of type (int * int) list
       Type int list is not compatible with type int 
